objects/TAndC_Acceptance_c__x.object
<CustomObject>
    <externalDataSource>HDMP_QA</externalDataSource>
    <externalName>TAndC_Acceptance__c</externalName>
    <fields>
        <fullName>AK_TandCID_RelatedID_c__c</fullName>
        <externalDeveloperName>AK_TandCID_RelatedID__c</externalDeveloperName>
        <label>AK TandC id Relate ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accepted_Datetime_c__c</fullName>
        <externalDeveloperName>Accepted_Datetime__c</externalDeveloperName>
        <label>Accepted Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Terms and Conditions Acceptance Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectName_c__c</fullName>
        <externalDeveloperName>ObjectName__c</externalDeveloperName>
        <label>Object Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <externalDeveloperName>OwnerId</externalDeveloperName>
        <label>Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_to_ID_c__c</fullName>
        <externalDeveloperName>Related_to_ID__c</externalDeveloperName>
        <label>Related to ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TermsAndConditions_ID_c__c</fullName>
        <externalDeveloperName>TermsAndConditions_ID__c</externalDeveloperName>
        <label>Terms and Conditions ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Terms and Conditions Acceptance</label>
    <pluralLabel>Terms and Conditions Acceptance</pluralLabel>
</CustomObject>